Refactor: senior-level audit fixes (tracker, ai/embedding, security, frontend)